[youtube] fix(scrollbar): fix scroll bar in Mac devices

--- a/packages/plugin-youtube/statics/styles/item.scss
+++ b/packages/plugin-youtube/statics/styles/item.scss
@@ -69,6 +69,7 @@
   font-size: 12px;
   line-height: 1.33;
   color: #969696;
+  overflow: hidden;
 }
 .video_publish_date {
   margin-top: 4px;
