--- a/packages/plugin-youtube/statics/styles/items-list.scss
+++ b/packages/plugin-youtube/statics/styles/items-list.scss
@@ -5,7 +5,7 @@
   background: #b2b2b2;
   border-radius: 4px;
   width: 4px;
-  margin-left: -13px;
+  margin-left: 1px;
   cursor: pointer;
 }
 
